[package]
name = "cve_2025_20265"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47.1", features = ["rt", "macros"] }
clap = { version = "4.5.47", features = ["derive"] }
reqwest = { version = "0.12.23", default-features = false, features = ["native-tls-vendored"] }
russh = "0.54.3"
url = "2.5.7"
anyhow = "1.0.99"
log = "0.4.27"
colog = "1.3.0"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
